[gd_scene load_steps=10 format=3 uid="uid://c1e6eg55m3270"]

[ext_resource type="Script" uid="uid://cbi7drpdbodaj" path="res://entities/bullets/player/player_coin.gd" id="1_dca15"]
[ext_resource type="PackedScene" uid="uid://007x0lj0h4n0" path="res://components/damage/damage_component.tscn" id="1_pcvrm"]
[ext_resource type="Script" uid="uid://do5vs8m1law7o" path="res://components/health/health_component.gd" id="3_0mj4a"]
[ext_resource type="Texture2D" uid="uid://dyccf13cnom4j" path="res://sprites/spr_red_bullet.png" id="3_ankud"]
[ext_resource type="Script" uid="uid://lxg83i28nlul" path="res://components/hurtbox/hurtbox_component.gd" id="4_dca15"]
[ext_resource type="Texture2D" uid="uid://de3eobkvftrue" path="res://sprites/spr_blue_bullet.png" id="4_tomru"]
[ext_resource type="Texture2D" uid="uid://vi8b4yxy6ghe" path="res://sprites/spr_colorless_bullet.png" id="5_c4ydd"]
[ext_resource type="PackedScene" uid="uid://dgumow3im617v" path="res://components/movement/coin_movement_component.tscn" id="8_tomru"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0mj4a"]

[node name="PlayerCoin" type="Area2D" node_paths=PackedStringArray("damage_component")]
script = ExtResource("1_dca15")
speed = 300.0
damage_component = NodePath("DamageComponent")
color_sprites = Array[Texture]([ExtResource("5_c4ydd"), ExtResource("3_ankud"), ExtResource("4_tomru")])
metadata/_custom_type_script = "uid://lxg83i28nlul"

[node name="DamageComponent" parent="." instance=ExtResource("1_pcvrm")]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_0mj4a")
max_health = 1
metadata/_custom_type_script = "uid://do5vs8m1law7o"

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component") groups=["coin_shootable"]]
script = ExtResource("4_dca15")
health_component = NodePath("../HealthComponent")
allowed_damage_sources = Array[int]([0])
metadata/_custom_type_script = "uid://lxg83i28nlul"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_0mj4a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_c4ydd")

[node name="CoinMovementComponent" parent="." node_paths=PackedStringArray("bullet") instance=ExtResource("8_tomru")]
bullet = NodePath("..")

[node name="Control" type="Control" parent="."]
visible = false
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 1152.0
offset_bottom = 8.0
pivot_offset = Vector2(8, 8)

[node name="Lazer" type="Line2D" parent="Control"]
points = PackedVector2Array(8, 8, 1160, 8)
